--- a/style.css
+++ b/style.css
@@ -14,11 +14,9 @@
 
 body {
     display: flex;
-  
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-
     background-image:url("https://i.pinimg.com/originals/22/df/03/22df0390c03d80cab2be412dcbd93b75.jpg");
 }
 
@@ -26,7 +24,7 @@ body {
 
 
 .iphone-frame {
-    background-color: #fff;
+    background-color: #000;
     height: 500px;
     position: relative;
     overflow: hidden;
@@ -34,8 +32,7 @@ body {
     border: 10px solid #000;
     border-radius: 40px;
     box-sizing: border-box;
-    box-shadow: 0px 0px 0px 0px #333;
-    background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v535batch2-mynt-43.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9f602de67a347b7c50ef8eeac3835189");
+    box-shadow: 0px 15px 30px rgba(250, 250, 248, 0.5); 
 }
 
 .iphone-frame .norch {
